[tool.poetry]
name = "whenareyou"
version = "0.6.1"
description = "Gets the time zone name of any location in the world."
authors = [
  "Florian Obersteiner <f.obersteiner@posteo.de>",
  "Lasse Schuirmann <lasse.schuirmann@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.9"
timezonefinder = ">= 5.2"
requests = ">= 2.27"

[tool.poetry.dev-dependencies]
pytest = "7.*"
black = ">= 22.12.0"
ruff = ">= 0.0.254"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
lint.ignore = ["E501"]
lint.extend-select = ["C4", "SIM"]
target-version = "py312"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
