[project]
name = "whenareyou"
version = "0.7.2"
description = "Gets the time zone name of any location in the world."
authors = [
  { name = "Florian Obersteiner", email = "f.obersteiner@posteo.de" },
  { name = "Lasse Schuirmann", email = "lasse.schuirmann@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["timezonefinder>=6.0.0"]

[dependency-groups]
dev = ["black>=24.10.0", "pytest>=8.3.4", "ruff>=0.9.1"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
lint.ignore = ["E501"]
lint.extend-select = ["C4", "SIM"]
target-version = "py312"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
